2012-08-25 Elmar Hinz  <elmar.hinz@gmail.com>

	* initial code generated with kickstarter