@@ -1,3 +1,2 @@
 <?php if (!defined('TYPO3_MODE')) { die ('Access denied.'); }
-
 ?>
