@@ -1,6 +1,6 @@
 <?php if (!defined('TYPO3_MODE')) { die ('Access denied.'); }
 
-# t3lib_extMgm::addStaticFile($_EXTKEY,'static/mysql_stored_procedure/', 'Mysql Stored Procedure');
+t3lib_extMgm::addStaticFile($_EXTKEY,'static/breadcrumb/', 'esp breadcrumb example');
 t3lib_extMgm::addStaticFile($_EXTKEY,'static/stored_procedure/', 'Stored Procedure');
 
 ?>
