@@ -1,3 +1,14 @@
-2012-08-25 Elmar Hinz  <elmar.hinz@gmail.com>
+2013-03-07 Elmar Hinz  <t3elmar@googlemail.com>
+
+	* rewrite code, writing unit tests, sphinx documentation
+
+2012-08-25 Elmar Hinz  <t3elmar@googlemail.com>
+
+	* experimental code, prove of concept
+
+2012-08-25 Elmar Hinz  <t3elmar@googlemail.com>
 
 	* initial code generated with kickstarter
+
+
+
